--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ ul li{
 
 #navbar ul {
     position: absolute;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .miniature {
@@ -59,4 +59,25 @@ ul li{
 #softwarepic {
     max-height: 180px;
 }
+
+.rightborder {
+    border-right: 1px solid white;
+}
+
+.leftborder {
+    border-left: 1px solid white;
+}
+.topandbottomborder {
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+td {
+    padding: 10px;
+}
+
 
