--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ a:visited, a:active, a {
     padding: 10px;
     font-size: larger;
     border-radius: 10px;
-    position: relative;
 }
 
 #navbar a {
@@ -48,7 +47,6 @@ ul li{
 }
 
 #navbar ul {
-    position: absolute;
     margin-top: 0;
 }
 
@@ -85,5 +83,28 @@ td {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+button{
+    display:inline-block;
+    padding:0.46em 1.6em;
+    border:0.1em solid #000000;
+    margin:0 0.2em 0.2em 0;
+    border-radius:0.12em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-weight:300;
+    color:#000000;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    background-color:#579783;
+    text-align:center;
+    transition: all 0.15s;
+}
+
+button:hover{
+    text-shadow: 0 0 2em rgba(255,255,255,1);
+    color:#FFFFFF;
+    border-color:#FFFFFF;
+}
+
 
 
